2001-11-05  Richard M. Stallman  <rms@gnu.org>

	* emacs-lisp/lisp-mode.el (eval-last-sexp-1): Return the value
	of the evaluated form.

2001-11-03  Stefan Monnier  <monnier@cs.yale.edu>

	* term.el (all faces): Don't (copy-face 'default <foo>).

2001-11-03  Eli Zaretskii  <eliz@is.elta.co.il>

	* tooltip.el (tooltip-delay): Decrease to 0.7.
	(tooltip-hide-delay): Enlarge to 10.

2001-11-03  Richard M. Stallman  <rms@gnu.org>

	* mouse.el (popup-menu): If the user refuses to select
	from a menu, don't try to invoke the menu.

2001-11-03  Eli Zaretskii  <eliz@is.elta.co.il>

	* frame.el (set-background-color, set-foreground-color):
	Call face-set-after-frame-default, to propagate the new colors to
	the frame's parameters alist.

	* calendar/timeclock.el (timeclock-out): Signal an error if
	timeclock-last-event is nil.

2001-11-01  Richard M. Stallman  <rms@gnu.org>

	* files.el (find-backup-file-name): Use make-backup-file-name.

2001-11-01  Gerd Moellmann  <gerd@gnu.org>

	* startup.el (command-line): If the terminal Emacs is running on
	has erase char set to ^H, use the Backspace key for deleting
	backward, and the Delete key for deleting forward.

2001-10-31  Jason Rumney  <jasonr@gnu.org>

	* international/mule-cmds.el (locale-language-names): Add chs and
	cht as aliases for Chinese-GB and Chinese-BIG5.

2001-10-30  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/perl-mode.el (perl-indent-line): Use `eq' to compare
	output of `char-after'.

	* progmodes/autoconf.el (autoconf-mode): Fix comment-start-skip.

2001-10-30  Gerd Moellmann  <gerd@gnu.org>

	* international/iso-acc.el (iso-accents-compose): Remove a
	superfluous setq.

2001-10-29  Eli Zaretskii  <eliz@is.elta.co.il>

	* faces.el (invert-face): Check for 'unspecified, not for nil,
	when testing whether face colors are not specified.
	From David.Kastrup@t-online.de (David Kastrup).

2001-10-29  Gerd Moellmann  <gerd@gnu.org>

	* international/iso-acc.el (iso-accents-compose): Push SECOND-CHAR