@@ -1,3 +1,8 @@
+2001-11-08  Eli Zaretskii  <eliz@is.elta.co.il>
+
+	* international/mule.el (make-translation-table): Doc fix.
+	Suggested by Alex Schroeder <alex@gnu.org>.
+
 2001-11-05  Richard M. Stallman  <rms@gnu.org>
 
 	* emacs-lisp/lisp-mode.el (eval-last-sexp-1): Return the value
